ifcc-test-output/testfiles-23_invalid_double_decl/gcc-compile.txt
input.c: In function ‘main’:
input.c:4:9: error: redeclaration of ‘a’ with no linkage
    4 |     int a;
      |         ^
input.c:3:9: note: previous declaration of ‘a’ with type ‘int’
    3 |     int a;
      |         ^

exit status: 1
